test/preprocessor/invalid/invalid-macro.glsl
#wrongmacro arg1 arg2